# adb-mobile

./: .gitignore  .gitmodules  Makefile  README.md  README.zh-cn.md
example/adb-demo/adb-demo/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
example/adb-demo/adb-demo.xcodeproj/: project.pbxproj
example/adb-demo/adb-demo.xcodeproj/project.xcworkspace/xcuserdata/ethan.xcuserdatad/: UserInterfaceState.xcuserstate
example/adb-demo/adb-demo.xcodeproj/xcuserdata/ethan.xcuserdatad/xcschemes/: xcschememanagement.plist
example/adb-demo/adb-demo/Base.lproj/: Main.storyboard
porting/: CMakeLists.txt  Makefile  protobuf.rb
porting/adb/: adb.cpp  adb_client.cpp  adb_io.cpp  adb_listeners.cpp  adb_porting.cpp  commandline.cpp  fdevent.cpp  libusb.cpp  transport.cpp  transport_local.cpp  transport_usb.cpp
porting/adb/client/: adb_client.cpp  adb_install.cpp  adb_porting.cpp  adb_porting.h  bugreport.cpp  commandline.cpp  commandline.h  file_sync_client.cpp  file_sync_client.h  main.cpp  transport_usb.cpp
porting/adb/include/: adb_porting.h  adb_public.h
porting/cmake/: CMakeLists.adb.txt  CMakeLists.crypto.txt  CMakeLists.protobuf.txt  CMakeLists.vendor.txt  CMakeLists.zstd.txt  protobuf.CMakeLists.txt
porting/protobuf/src/google/protobuf/: map_probe_benchmark.cc
porting/scripts/: defines.sh  make-adb.sh  make-brotli.sh  make-lz4.sh  make-protobuf.sh  make-zstd.sh
